--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,66 +1,121 @@
 <div class="mr-md-3 pt-3 px-3 pt-md-5 px-md-5 overflow-hidden">
-    <div class="bg-white box-shadow mx-auto" style="width: 100%; border-radius: 21px 21px 21px 21px; padding-bottom: 100px; margin-bottom: 50px;">
-        <div class="bg-dark" style="border-radius: 21px 21px 0 0; height: 175px;">
-            <div style="padding: 50px 50px 0px 50px; font-size: 44px; color: white;">Users</div>
-            <div style="padding: 0px 50px 50px 50px; font-size: 16px; font-weight: lighter; color: white;">Get Twitch user data</div>
-        </div>
-        <div class="container">
-        <br />
-
-            <!-- Card Body -->
-            <div class="card-body"> 
-                <div class="justify-content-between align-items-center">
-
-                    <!-- Form  -->
-                    <form>
-
-                        <!-- Form row  -->
-                        <div class="form-group row"> 
-                            <div class="btn-group" dropdown style="width: 100%;"> 
-                                <div class="input-group">
-
-                                    <!-- Drop down button -->
-                                    <div class="input-group-prepend">
-                                        <button id="button-basic" dropdownToggle type="button" class="btn btn-outline-secondary dropdown-toggle"
-                                        aria-controls="dropdown-basic">User name<span class="caret"></span></button>
-
-                                        <!-- Drop down menu -->
-                                        <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="button-basic">
-                                            <li role="menuitem"><a class="dropdown-item" href="#">User name</a></li>
-                                            <li role="menuitem"><a class="dropdown-item" href="#">User id</a></li>
-                                        </ul> <!-- End of Drop down menu -->
-                                    </div> <!-- End of Drop down button -->
-                                        
-                                    <!-- Input field-->
-                                    <input type="text" class="form-control" autocomplete="off" placeholder="USER NAME" id="providedUser" #providedUser value="nizos" (keyup.enter)="onEnter(providedUser.value)" (keyup.enter)="getUserById(userId)" aria-label="Text input with segmented dropdown button"> <!-- End of Input Field -->
-
-                                    <!-- Button -->
-                                    <div class="input-group-append">
-                                        <button type="button" class="btn btn-secondary">Get user</button>
-                                    </div><!-- End of Button -->
-                                </div>
-                            </div>
-                        </div> <!-- End of Form row  -->
-    
-                        <!-- Form row  -->
-                        <div class="form-group row">
-                        </div> <!-- End of Form row  -->
-
-
-
-                        <!-- Form row  -->
-                        <div class="form-group row">
-                        </div> <!-- End of Form row  -->
-
-
-
-                        <!-- Form row  -->
-                        <div class="form-group row">
-                        </div> <!-- End of Form row  -->
-
-                    </form> <!-- End of Form  -->
-                </div><!-- End of Justify content -->
-            </div><!-- End of Card body -->
-        </div><!-- End of Container -->
+  <div class="bg-white box-shadow mx-auto" style="width: 100%; border-radius: 21px 21px 21px 21px; padding-bottom: 100px; margin-bottom: 50px;">
+    <div class="bg-dark" style="border-radius: 21px 21px 0 0; height: 175px;">
+      <div style="padding: 50px 50px 0px 50px; font-size: 44px; color: white;">Users</div>
+      <div style="padding: 0px 50px 50px 50px; font-size: 16px; font-weight: lighter; color: white;">Get Twitch user data</div>
     </div>
+    <div class="container">
+      <br />
+
+      <!-- Card Body -->
+      <div class="card-body">
+        <div class="justify-content-between align-items-center">
+
+          <!-- Form  -->
+          <form>
+
+            <!-- Form row  -->
+            <div class="form-group row">
+              <div class="btn-group" dropdown style="width: 100%;">
+                <div class="input-group">
+
+                  <!-- Drop down button -->
+                  <div class="input-group-prepend">
+                    <button id="user-fetch-method-dropdown-toggle" dropdownToggle type="button" class="btn btn-outline-secondary dropdown-toggle" aria-controls="dropdown-basic">User name
+                      <span class="caret"></span>
+                    </button>
+
+                    <!-- Drop down menu -->
+                    <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="button-basic">
+                      <li role="menuitem">
+                        <a class="dropdown-item" (click)="setFetchMethod(fetchUserByUsername)" href="#">User name</a>
+                      </li>
+                      <li role="menuitem">
+                        <a class="dropdown-item" href="#">User id</a>
+                      </li>
+                    </ul>
+                    <!-- End of Drop down menu -->
+                  </div>
+                  <!-- End of Drop down button -->
+
+                  <!-- Input field-->
+                  <input type="text" class="form-control" autocomplete="off" placeholder="USER NAME" id="providedUser" #providedUser value="nizos"
+                    (keyup.enter)="onEnter(providedUser.value)" (keyup.enter)="getUserById(userId)" aria-label="Text input with segmented dropdown button">
+                  <!-- End of Input Field -->
+
+                  <!-- Button -->
+                  <div class="input-group-append">
+                    <button type="button" class="btn btn-secondary" (click)="onEnter(providedUserId.value)" (click)="getUserById(userId)">Get user</button>
+                  </div>
+                  <!-- End of Button -->
+                </div>
+              </div>
+            </div>
+            <!-- End of Form row  -->
+
+            <!-- Form row  -->
+            <div class="form-group row">
+            </div>
+            <!-- End of Form row  -->
+
+
+
+            <!-- Form row  -->
+            <div class="form-group row">
+            </div>
+            <!-- End of Form row  -->
+
+
+
+            <!-- Form row  -->
+            <div class="form-group row">
+            </div>
+            <!-- End of Form row  -->
+
+          </form>
+          <!-- End of Form  -->
+
+
+
+          <div class="row">
+            <div class="users-container" *ngFor="let user of users">
+              <div class="col-md-8">
+                <h6 class="my-0">Display Name</h6>
+                <a target="_blank" href="https://www.twitch.tv">
+                  <small class="userInfo">{{user.display_name}}</small>
+                </a>
+                <hr>
+                <h6 class="my-0">Broadcaster Type</h6>
+                <small class="userInfo">{{user.broadcaster_type}}</small>
+                <hr>
+                <h6 class="my-0">Description</h6>
+                <small class="userInfo">{{user.description}}</small>
+                <hr>
+                <h6 class="my-0">User ID</h6>
+                <small class="userInfo">{{user.id}}</small>
+                <hr>
+                <h6 class="my-0">User Type</h6>
+                <small class="userInfo">{{user.type}}</small>
+                <hr>
+                <h6 class="my-0">View Count</h6>
+                <small class="userInfo">{{user.view_count}}</small>
+              </div>
+              <div class="col-md-4">
+                <h6 class="my-0">Profile Image</h6>
+                <img class="thumbnail" src="{{user.profile_image_url}}">
+                <hr>
+                <h6 class="my-0">Offline Image</h6>
+                <img class="thumbnail" src="{{user.offline_image_url}}">
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+        <!-- End of Justify content -->
+      </div>
+      <!-- End of Card body -->
+    </div>
+    <!-- End of Container -->
+  </div>
 </div>
