--- a/public/src/app/app.component.html
+++ b/public/src/app/app.component.html
@@ -1,41 +1,20 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand nav-link" routerLink="/home" routerLinkActive="active">Streamer Dashboard</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar"aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbar">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLink="/channels" routerLinkActive="active">Channels</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLink="/streams" routerLinkActive="active">Streams</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLink="/videos" routerLinkActive="active">Videos</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLink="/clips" routerLinkActive="active">Clips</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLink="/users" routerLinkActive="active">Users</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLink="/games" routerLinkActive="active">Games</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLink="/chat" routerLinkActive="active">Chat</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLink="/bot" routerLinkActive="active">Bot</a>
-            </li>
+            <li class="nav-item"><a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="/dashboard" routerLinkActive="active">Dashboard</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="/channels" routerLinkActive="active">Channels</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="/streams" routerLinkActive="active">Streams</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="/videos" routerLinkActive="active">Videos</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="/clips" routerLinkActive="active">Clips</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="/users" routerLinkActive="active">Users</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="/games" routerLinkActive="active">Games</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="/chat" routerLinkActive="active">Chat</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="/bot" routerLinkActive="active">Bot</a></li>
         </ul>
         <ul class="navbar-nav">
             <a class="nav-link" routerLink="/signin" routerLinkActive="active">Sign in</a>
@@ -44,88 +23,47 @@
     </div>
 </nav>
 
-
-        <div class="container">
-            <router-outlet></router-outlet>
-        </div>
+        <div class="container"><router-outlet></router-outlet></div>
 
 <footer class="container py-5">
     <div class="row">
-        <div class="col-12 col-md">
-            <small class="d-block mb-3 text-muted">&copy; NIZOS 2018</small>
-        </div>
+        <div class="col-12 col-md"><small class="d-block mb-3 text-muted">&copy; NIZOS 2018</small></div>
         <div class="col-6 col-md">
             <h5>Features</h5>
             <ul class="list-unstyled text-small">
-                <li>
-                    <a class="text-muted" href="#">Cool stuff</a>
-                </li>
-                <li>
-                    <a class="text-muted" href="#">Random feature</a>
-                </li>
-                <li>
-                    <a class="text-muted" href="#">Team feature</a>
-                </li>
-                <li>
-                    <a class="text-muted" href="#">Stuff for developers</a>
-                </li>
-                <li>
-                    <a class="text-muted" href="#">Another one</a>
-                </li>
-                <li>
-                    <a class="text-muted" href="#">Last time</a>
-                </li>
+                <li><a class="text-muted" href="#">Cool stuff</a></li>
+                <li><a class="text-muted" href="#">Random feature</a></li>
+                <li><a class="text-muted" href="#">Team feature</a></li>
+                <li><a class="text-muted" href="#">Stuff for developers</a></li>
+                <li><a class="text-muted" href="#">Another one</a></li>
+                <li><a class="text-muted" href="#">Last time</a></li>
             </ul>
         </div>
         <div class="col-6 col-md">
             <h5>Resources</h5>
             <ul class="list-unstyled text-small">
-                <li>
-                    <a class="text-muted" href="#">Resource</a>
-                </li>
-                <li>
-                    <a class="text-muted" href="#">Resource name</a>
-                </li>
-                <li>
-                    <a class="text-muted" href="#">Another resource</a>
-                </li>
-                <li>
-                    <a class="text-muted" href="#">Final resource</a>
-                </li>
+                <li><a class="text-muted" href="#">Resource</a></li>
+                <li><a class="text-muted" href="#">Resource name</a></li>
+                <li><a class="text-muted" href="#">Another resource</a></li>
+                <li><a class="text-muted" href="#">Final resource</a></li>
             </ul>
         </div>
         <div class="col-6 col-md">
             <h5>Resources</h5>
             <ul class="list-unstyled text-small">
-                <li>
-                    <a class="text-muted" href="#">Business</a>
-                </li>
-                <li>
-                    <a class="text-muted" href="#">Education</a>
-                </li>
-                <li>
-                    <a class="text-muted" href="#">Government</a>
-                </li>
-                <li>
-                    <a class="text-muted" href="#">Gaming</a>
-                </li>
+                <li><a class="text-muted" href="#">Business</a></li>
+                <li><a class="text-muted" href="#">Education</a></li>
+                <li><a class="text-muted" href="#">Government</a></li>
+                <li><a class="text-muted" href="#">Gaming</a></li>
             </ul>
         </div>
         <div class="col-6 col-md">
             <h5>About</h5>
             <ul class="list-unstyled text-small">
-                <li>
-                    <a class="text-muted" href="#">Team</a>
-                </li>
-                <li>
-                    <a class="text-muted" href="#">Locations</a>
-                </li>
-                <li>
-                    <a class="text-muted" href="#">Privacy</a>
-                </li>
-                <li>
-                    <a class="text-muted" href="#">Terms</a>
-                </li>
+                <li><a class="text-muted" href="#">Team</a></li>
+                <li><a class="text-muted" href="#">Locations</a></li>
+                <li><a class="text-muted" href="#">Privacy</a></li>
+                <li><a class="text-muted" href="#">Terms</a></li>
             </ul>
         </div>
     </div>
