--- a/public/src/app/ui/sidebar/sidebar.component.html
+++ b/public/src/app/ui/sidebar/sidebar.component.html
@@ -1,3 +1,45 @@
-<p>
-  sidebar works!
-</p>
+<nav>
+  <ul>
+    <li>
+      <a routerLink="" routerLinkActive="active" [class.activated]="currentUrl == '/'">
+        <i class="material-icons">menu</i>
+      </a>
+      <a routerLink="/home" routerLinkActive="active" [class.activated]="currentUrl == '/home'">
+        <i class="material-icons">home</i>
+      </a>
+      <a routerLink="/dashboard" routerLinkActive="active" [class.activated]="currentUrl == '/dashboard'">
+        <i class="material-icons">dashboard</i>
+      </a>
+      <a routerLink="/channels" routerLinkActive="active" [class.activated]="currentUrl == '/channels'">
+        <i class="material-icons">web</i>
+      </a>
+      <a routerLink="/streams" routerLinkActive="active" [class.activated]="currentUrl == '/streams'">
+        <i class="material-icons">ondemand_video</i>
+      </a>
+      <a routerLink="/videos" routerLinkActive="active" [class.activated]="currentUrl == '/videos'">
+        <i class="material-icons">subscriptions</i>
+      </a>
+      <a routerLink="/clips" routerLinkActive="active" [class.activated]="currentUrl == '/clips'">
+        <i class="material-icons">movie</i>
+      </a>
+      <a routerLink="/users" routerLinkActive="active" [class.activated]="currentUrl == '/users'">
+        <i class="material-icons">group</i>
+      </a>
+      <a routerLink="/games" routerLinkActive="active" [class.activated]="currentUrl == '/games'">
+        <i class="material-icons">games</i>
+      </a>
+      <a routerLink="/chat" routerLinkActive="active" [class.activated]="currentUrl == '/chat'">
+        <i class="material-icons">chat</i>
+      </a>
+      <a routerLink="/bot" routerLinkActive="active" [class.activated]="currentUrl == '/bot'">
+        <i class="material-icons">adb</i>
+      </a>
+      <a routerLink="/signin" routerLinkActive="active" [class.activated]="currentUrl == '/signin'">
+        <i class="material-icons">account_circle</i>
+      </a>
+      <a routerLink="/signout" routerLinkActive="active" [class.activated]="currentUrl == '/signout'">
+        <i class="material-icons">exit_to_app</i>
+      </a>
+    </li>
+  </ul>
+</nav>
