--- a/public/src/styles.scss
+++ b/public/src/styles.scss
@@ -1,14 +1,57 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body {
-  height: 100%;
-}
 body {
   margin: 0;
-  padding: 0;
-  font-family: Roboto, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   background-color: rgb(243, 243, 243);
+  height: 100vh;
 }
+
+#container {
+  display: grid;
+  grid-template-columns: 70px auto;
+  height: 100%;
+
+  #content {
+    padding: 30px 50px;
+
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+
+      li {
+        background: #fff;
+        border-radius: 8px;
+        padding: 20px;
+        margin-bottom: 8px;
+
+        a {
+          font-size: 1.5em;
+          text-decoration: none;
+          font-weight: bold;
+          color: #00A8FF;
+        }
+
+        ul {
+          margin-top: 20px;
+
+          li {
+            padding: 0;
+
+            a {
+              font-size: 1em;
+              font-weight: 300;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+
+
 .background {
   position: absolute;
   top: 0;
@@ -60,13 +103,13 @@ body {
 }
 
 .loading-text {
-  font-family: 'Roboto', sans-serif;
-  color:#343A40;
-  font-size:19px;
-  position:relative;
-  top:15px;
-  width:100%;
-  text-align:center;
+  font-family: 'Montserrat', sans-serif;
+  color: #343A40;
+  font-size: 32px;
+  position: relative;
+  top: 15px;
+  width: 100%;
+  text-align: center;
   z-index: 1;
 }
 
