Added tooltips to sidebar

--- a/public/src/app/ui/sidebar/sidebar.component.html
+++ b/public/src/app/ui/sidebar/sidebar.component.html
@@ -1,45 +1,46 @@
 <nav>
   <ul>
     <li>
-      <a routerLink="" routerLinkActive="active" [class.activated]="currentUrl == '/'">
+      <a routerLink="" routerLinkActive="active" [class.activated]="currentUrl == '/'" placement="right" ngbTooltip="Toggle side bar">
         <i class="material-icons">menu</i>
       </a>
-      <a routerLink="/home" routerLinkActive="active" [class.activated]="currentUrl == '/home'">
+      <a routerLink="/home" routerLinkActive="active" [class.activated]="currentUrl == '/home'" placement="right" ngbTooltip="Home">
         <i class="material-icons">home</i>
       </a>
-      <a routerLink="/dashboard" routerLinkActive="active" [class.activated]="currentUrl == '/dashboard'">
+      <a routerLink="/dashboard" routerLinkActive="active" [class.activated]="currentUrl == '/dashboard'" placement="right" ngbTooltip="Dashboard">
         <i class="material-icons">dashboard</i>
       </a>
-      <a routerLink="/channels" routerLinkActive="active" [class.activated]="currentUrl == '/channels'">
+      <a routerLink="/channels" routerLinkActive="active" [class.activated]="currentUrl == '/channels'" placement="right" ngbTooltip="Channels">
         <i class="material-icons">web</i>
       </a>
-      <a routerLink="/streams" routerLinkActive="active" [class.activated]="currentUrl == '/streams'">
+      <a routerLink="/streams" routerLinkActive="active" [class.activated]="currentUrl == '/streams'" placement="right" ngbTooltip="Streams">
         <i class="material-icons">ondemand_video</i>
       </a>
-      <a routerLink="/videos" routerLinkActive="active" [class.activated]="currentUrl == '/videos'">
+      <a routerLink="/videos" routerLinkActive="active" [class.activated]="currentUrl == '/videos'" placement="right" ngbTooltip="Videos">
         <i class="material-icons">subscriptions</i>
       </a>
-      <a routerLink="/clips" routerLinkActive="active" [class.activated]="currentUrl == '/clips'">
+      <a routerLink="/clips" routerLinkActive="active" [class.activated]="currentUrl == '/clips'" placement="right" ngbTooltip="Clips">
         <i class="material-icons">movie</i>
       </a>
-      <a routerLink="/users" routerLinkActive="active" [class.activated]="currentUrl == '/users'">
+      <a routerLink="/users" routerLinkActive="active" [class.activated]="currentUrl == '/users'" placement="right" ngbTooltip="Users">
         <i class="material-icons">group</i>
       </a>
-      <a routerLink="/games" routerLinkActive="active" [class.activated]="currentUrl == '/games'">
+      <a routerLink="/games" routerLinkActive="active" [class.activated]="currentUrl == '/games'" placement="right" ngbTooltip="Games">
         <i class="material-icons">games</i>
       </a>
-      <a routerLink="/chat" routerLinkActive="active" [class.activated]="currentUrl == '/chat'">
+      <a routerLink="/chat" routerLinkActive="active" [class.activated]="currentUrl == '/chat'" placement="right" ngbTooltip="Chat">
         <i class="material-icons">chat</i>
       </a>
-      <a routerLink="/bot" routerLinkActive="active" [class.activated]="currentUrl == '/bot'">
+      <a routerLink="/bot" routerLinkActive="active" [class.activated]="currentUrl == '/bot'" placement="right" ngbTooltip="Bot">
         <i class="material-icons">adb</i>
       </a>
-      <a routerLink="/signin" routerLinkActive="active" [class.activated]="currentUrl == '/signin'">
+      <a routerLink="/signin" routerLinkActive="active" [class.activated]="currentUrl == '/signin'" placement="right" ngbTooltip="Sign in">
         <i class="material-icons">account_circle</i>
       </a>
-      <a routerLink="/signout" routerLinkActive="active" [class.activated]="currentUrl == '/signout'">
+      <a routerLink="/signout" routerLinkActive="active" [class.activated]="currentUrl == '/signout'" placement="right" ngbTooltip="Sign out">
         <i class="material-icons">exit_to_app</i>
       </a>
     </li>
   </ul>
 </nav>
+
