Sidebar now fixed to top

--- a/public/src/app/pages/users/users.component.html
+++ b/public/src/app/pages/users/users.component.html
@@ -6,8 +6,8 @@
     </div>
     <div class="container">
       <br />
-      <ngb-tabset [justify]="currentJustify">
-        <ngb-tab title="Get user by user ID">
+      <ngb-tabset justify="justified">
+        <ngb-tab mat-button title="Get user by user ID">
           <ng-template ngbTabContent>
             <!-- Card  -->
             <div class="card-body">
