--- a/public/src/app/ui/sidebar/sidebar.component.scss
+++ b/public/src/app/ui/sidebar/sidebar.component.scss
@@ -7,8 +7,8 @@
 
 
  nav {
-  background: #2D2E2E;
-  height: 100%;
+
+
 
   ul {
     list-style-type: none;
@@ -16,6 +16,7 @@
     margin: 0;
 
     li {
+      color: #fff;
 
       a {
         color: #fff;
@@ -29,4 +30,29 @@
       }
     }
   }
+}
+
+.sidebar {
+  position: fixed;
+  height: 100%;
+  width: 70px;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  overflow-x: hidden;
+  padding-top: 20px;
+  background: #2D2E2E;
+}
+
+.sidebar-button {
+  height: 70px;
+  width: 70px;
+}
+
+.sidebar-button-icon {
+  color: #ffffff
+}
+
+.mat-button {
+  min-width: 1%;
 }
