--- a/public/src/app/ui/sidebar/sidebar.component.html
+++ b/public/src/app/ui/sidebar/sidebar.component.html
@@ -1,45 +1,45 @@
-<nav>
+<nav class="sidebar">
   <ul>
     <li>
-      <a routerLink="" routerLinkActive="active" [class.activated]="currentUrl == '/'" placement="right" ngbTooltip="Toggle side bar">
-        <i class="material-icons">menu</i>
-      </a>
-      <a routerLink="/home" routerLinkActive="active" [class.activated]="currentUrl == '/home'" placement="right" ngbTooltip="Home">
-        <i class="material-icons">home</i>
-      </a>
-      <a routerLink="/dashboard" routerLinkActive="active" [class.activated]="currentUrl == '/dashboard'" placement="right" ngbTooltip="Dashboard">
-        <i class="material-icons">dashboard</i>
-      </a>
-      <a routerLink="/channels" routerLinkActive="active" [class.activated]="currentUrl == '/channels'" placement="right" ngbTooltip="Channels">
-        <i class="material-icons">web</i>
-      </a>
-      <a routerLink="/streams" routerLinkActive="active" [class.activated]="currentUrl == '/streams'" placement="right" ngbTooltip="Streams">
-        <i class="material-icons">ondemand_video</i>
-      </a>
-      <a routerLink="/videos" routerLinkActive="active" [class.activated]="currentUrl == '/videos'" placement="right" ngbTooltip="Videos">
-        <i class="material-icons">subscriptions</i>
-      </a>
-      <a routerLink="/clips" routerLinkActive="active" [class.activated]="currentUrl == '/clips'" placement="right" ngbTooltip="Clips">
-        <i class="material-icons">movie</i>
-      </a>
-      <a routerLink="/users" routerLinkActive="active" [class.activated]="currentUrl == '/users'" placement="right" ngbTooltip="Users">
-        <i class="material-icons">group</i>
-      </a>
-      <a routerLink="/games" routerLinkActive="active" [class.activated]="currentUrl == '/games'" placement="right" ngbTooltip="Games">
-        <i class="material-icons">games</i>
-      </a>
-      <a routerLink="/chat" routerLinkActive="active" [class.activated]="currentUrl == '/chat'" placement="right" ngbTooltip="Chat">
-        <i class="material-icons">chat</i>
-      </a>
-      <a routerLink="/bot" routerLinkActive="active" [class.activated]="currentUrl == '/bot'" placement="right" ngbTooltip="Bot">
-        <i class="material-icons">adb</i>
-      </a>
-      <a routerLink="/signin" routerLinkActive="active" [class.activated]="currentUrl == '/signin'" placement="right" ngbTooltip="Sign in">
-        <i class="material-icons">account_circle</i>
-      </a>
-      <a routerLink="/signout" routerLinkActive="active" [class.activated]="currentUrl == '/signout'" placement="right" ngbTooltip="Sign out">
-        <i class="material-icons">exit_to_app</i>
-      </a>
+      <button mat-button class="sidebar-button" routerLink="" routerLinkActive="active" [class.activated]="currentUrl == '/'" placement="right" ngbTooltip="Toggle side bar">
+        <i class="material-icons sidebarr-button-icon">menu</i>
+      </button>
+      <button mat-button class="sidebar-button" routerLink="/home" routerLinkActive="active" [class.activated]="currentUrl == '/home'" placement="right" ngbTooltip="Home">
+        <i class="material-icons sidebarr-button-icon">home</i>
+      </button>
+      <button mat-button class="sidebar-button" routerLink="/dashboard" routerLinkActive="active" [class.activated]="currentUrl == '/dashboard'" placement="right" ngbTooltip="Dashboard">
+        <i class="material-icons sidebarr-button-icon">dashboard</i>
+      </button>
+      <button mat-button class="sidebar-button" routerLink="/channels" routerLinkActive="active" [class.activated]="currentUrl == '/channels'" placement="right" ngbTooltip="Channels">
+        <i class="material-icons sidebarr-button-icon">web</i>
+      </button>
+      <button mat-button class="sidebar-button" routerLink="/streams" routerLinkActive="active" [class.activated]="currentUrl == '/streams'" placement="right" ngbTooltip="Streams">
+        <i class="material-icons sidebarr-button-icon">ondemand_video</i>
+      </button>
+      <button mat-button class="sidebar-button" routerLink="/videos" routerLinkActive="active" [class.activated]="currentUrl == '/videos'" placement="right" ngbTooltip="Videos">
+        <i class="material-icons sidebarr-button-icon">subscriptions</i>
+      </button>
+      <button mat-button class="sidebar-button" routerLink="/clips" routerLinkActive="active" [class.activated]="currentUrl == '/clips'" placement="right" ngbTooltip="Clips">
+        <i class="material-icons sidebarr-button-icon">movie</i>
+      </button>
+      <button mat-button class="sidebar-button" routerLink="/users" routerLinkActive="active" [class.activated]="currentUrl == '/users'" placement="right" ngbTooltip="Users">
+        <i class="material-icons sidebarr-button-icon">group</i>
+      </button>
+      <button mat-button class="sidebar-button" routerLink="/games" routerLinkActive="active" [class.activated]="currentUrl == '/games'" placement="right" ngbTooltip="Games">
+        <i class="material-icons sidebarr-button-icon">games</i>
+      </button>
+      <button mat-button class="sidebar-button" routerLink="/chat" routerLinkActive="active" [class.activated]="currentUrl == '/chat'" placement="right" ngbTooltip="Chat">
+        <i class="material-icons sidebarr-button-icon">chat</i>
+      </button>
+      <button mat-button class="sidebar-button" routerLink="/bot" routerLinkActive="active" [class.activated]="currentUrl == '/bot'" placement="right" ngbTooltip="Bot">
+        <i class="material-icons sidebarr-button-icon">adb</i>
+      </button>
+      <button mat-button class="sidebar-button" routerLink="/signin" routerLinkActive="active" [class.activated]="currentUrl == '/signin'" placement="right" ngbTooltip="Sign in">
+        <i class="material-icons sidebarr-button-icon">account_circle</i>
+      </button>
+      <button mat-button class="sidebar-button" routerLink="/signout" routerLinkActive="active" [class.activated]="currentUrl == '/signout'" placement="right" ngbTooltip="Sign out">
+        <i class="material-icons sidebarr-button-icon">exit_to_app</i>
+      </button>
     </li>
   </ul>
 </nav>
