Sidebar fixed to top and collapses

--- a/public/src/app/app.component.html
+++ b/public/src/app/app.component.html
@@ -1,2 +1,12 @@
-<app-sidebar></app-sidebar>
-<canvas class="background"></canvas>
+<div id="container">
+  <app-sidebar></app-sidebar>
+
+  <div id="content">
+  <router-outlet></router-outlet>
+  <canvas class="background"></canvas>
+  </div>
+
+</div>
+
+
+
