--- a/public/src/app/ui/sidebar/sidebar.component.scss
+++ b/public/src/app/ui/sidebar/sidebar.component.scss
@@ -5,54 +5,165 @@
  * @Last Modified time: 2018-06-02 23:44:37
  */
 
+/* ---------------------------------------------------
+    SIDEBAR STYLE
+----------------------------------------------------- */
+.wrapper {
+  display: flex;
+  align-items: stretch;
+}
 
- nav {
+// SIDEBAR
+// COLLAPSED
+#sidebar {
+  min-width: 70px;
+  max-width: 70px;
+  color: #fff;
+  background: #343A40;
+  transition: all 0.3s;
+}
+// EXPANDED
+#sidebar.expanded {
+  min-width: 250px;
+  max-width: 250px;
+}
 
 
+// LIST
+// COLLAPSED
+#sidebar ul li {
+display: block;
+min-width: 70px;
+max-width: 70px;
+}
+// EXPANDED
+#sidebar.expanded ul li {
+min-width: 250px;
+max-width: 250px;
+}
 
-  ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
+// BUTTON
+// COLLAPSED
+#sidebar ul li .sidebar-button {
+min-width: 70px;
+max-width: 70px;
+}
+// EXPANDED
+#sidebar.expanded ul li .sidebar-button {
+min-width: 250px;
+max-width: 250px;
+}
 
-    li {
-      color: #fff;
+.sidebar-button-container {
+padding-left: 0px;
+}
 
-      a {
-        color: #fff;
-        padding: 20px;
-        display: block;
-      }
+.sidebar-button-row {
+padding-left: 0px;
+}
 
-      .activated {
-        background-color: #00a8ff;
+.sidebar-icon-col {
+padding: 0px;
+min-width: 70px;
+max-width: 70px;
+}
 
-      }
-    }
+// ICON
+.sidebar-button-icon {
+display: block;
+padding: 20px;
+}
+
+.sidebar-text-col {
+
+}
+
+// TEXT
+// COLLAPSED
+#sidebar .sidebar-button-text {
+display: none;
+}
+// EXPANDED
+#sidebar.expanded .sidebar-button-text {
+display: block;
+text-align: left;
+font-size: 1.0em;
+font-style: normal;
+}
+
+/* ---------------------------------------------------
+  CONTENT STYLE
+----------------------------------------------------- */
+#content {
+  transition: all 0.3s;
+}
+
+.box-shadow {
+box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+}
+
+.overflow-hidden {
+overflow: hidden;
+}
+
+/* ---------------------------------------------------
+  MEDIAQUERIES
+----------------------------------------------------- */
+@media (max-width: 768px) {
+  #sidebar {
+      min-width: 80px;
+      max-width: 80px;
+      text-align: center;
+      margin-left: -80px !important ;
+  }
+  a[aria-expanded="false"]::before, a[aria-expanded="true"]::before {
+      top: auto;
+      bottom: 5px;
+      right: 50%;
+      -webkit-transform: translateX(50%);
+      -ms-transform: translateX(50%);
+      transform: translateX(50%);
+  }
+  #sidebar.expanded {
+      margin-left: 0 !important;
+  }
+
+  #sidebar .sidebar-header h3, #sidebar .CTAs {
+      display: none;
+  }
+
+  #sidebar .sidebar-header strong {
+      display: block;
+  }
+
+  #sidebar ul li a {
+      padding: 20px 10px;
+  }
+
+  #sidebar ul li a span {
+      font-size: 0.85em;
+  }
+  #sidebar ul li a i {
+      margin-right:  0;
+      display: block;
+  }
+
+  #sidebar ul ul a {
+      padding: 10px !important;
+  }
+
+  #sidebar ul li a i {
+      font-size: 1.3em;
+  }
+  #sidebar {
+      margin-left: 0;
+  }
+  #sidebar-collapse span {
+      display: none;
   }
 }
 
-.sidebar {
-  position: fixed;
-  height: 100%;
-  width: 70px;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  overflow-x: hidden;
-  padding-top: 20px;
-  background: #2D2E2E;
-}
-
-.sidebar-button {
-  height: 70px;
-  width: 70px;
-}
-
-.sidebar-button-icon {
-  color: #ffffff
-}
 
 .mat-button {
-  min-width: 1%;
+min-width: 1%;
 }
